--- a/expense.conf
+++ b/expense.conf
@@ -1,8 +1,5 @@
 proxy_http_version 1.1;
-
-location /api/ { proxy_pass http://backend.dev.pdevops.online:8080/; 
-}
-
+location /api/ { proxy_pass http://backend.sikadu.online:8080/; }
 location /health {
   stub_status on;
   access_log off;
